Fixing compile error